[tool.poetry]
name = "cw-3"
version = "0.1.0"
description = ""
authors = ["ageev <agvilya@gmail.com>"]
readme = "README.md"
packages = [{include = "cw_3"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
